Fixed code styling (now uses pre for block-level and code for inline) and fixed overflow-scrolling for code blocks

--- a/src/stylesheets/codex/core.css
+++ b/src/stylesheets/codex/core.css
@@ -3,12 +3,16 @@
 	-moz-osx-font-smoothing: auto;
 
 	font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+	font-size: 1em;
 	-moz-tab-size: 4;
 	tab-size: 4;
-	font-feature-settings: "tnum";
+
+	/* font-feature-settings: "tnum"; */
 }
+.codex-editor pre,
 .codex-editor code {
 	font-family: "iA Writer Mono var", monospace;
+	font-size: 0.875em;
 	-moz-tab-size: 2;
 	tab-size: 2;
 }
