--- a/src/stylesheets/codex/inline-elements.css
+++ b/src/stylesheets/codex/inline-elements.css
@@ -4,11 +4,11 @@
 	line-height: 1;
 }
 /* https://stackoverflow.com/a/12198561 */
-.codex-editor > p > [aria-label][role="img"]:first-child:nth-last-child(1),
-.codex-editor > p > [aria-label][role="img"]:first-child:nth-last-child(2),
-.codex-editor > p > [aria-label][role="img"]:first-child:nth-last-child(2) ~ [aria-label][role="img"],
-.codex-editor > p > [aria-label][role="img"]:first-child:nth-last-child(3),
-.codex-editor > p > [aria-label][role="img"]:first-child:nth-last-child(3) ~ [aria-label][role="img"] {
+.codex-editor p [aria-label][role="img"]:first-child:nth-last-child(1),
+.codex-editor p [aria-label][role="img"]:first-child:nth-last-child(2),
+.codex-editor p [aria-label][role="img"]:first-child:nth-last-child(2) ~ [aria-label][role="img"],
+.codex-editor p [aria-label][role="img"]:first-child:nth-last-child(3),
+.codex-editor p [aria-label][role="img"]:first-child:nth-last-child(3) ~ [aria-label][role="img"] {
 	font-size: 2em;
 }
 
@@ -33,7 +33,7 @@
 	padding-right: 0.25em;
 	padding-top: 1px;
 	padding-bottom: 1px;
-	font-size: 0.875em;
+	/* font-size: 0.875em; */
 	color: var(--md-blue-a400);
 	border-width: 1px;
 	border-radius: 0.25em;
@@ -49,3 +49,4 @@
 	color: var(--gray-500);
 	text-decoration: line-through;
 }
+/* TODO */
